--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "node_modules/.bin/tsx watch server.ts",
     "start": "node_modules/.bin/tsx server.ts",
     "build": "node_modules/.bin/tsc",
-    "prod": "node dist/server.js"
+    "prod": "node dist/server.js",
+    "seed": "tsx scripts/seed_database.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
